<?xml version="1.0" encoding="utf-8"?>
<!-- body layout -->
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/title_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:id="@+id/rel_body"
        android:paddingBottom="40dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/txt_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:textColor="@android:color/white"
            android:textSize="27sp"
            android:layout_marginTop="52dp"
            android:layout_marginBottom="15dp"
            android:text="@string/app_name"/>
        <ImageView
            android:id="@+id/img_close"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:src="@drawable/sel_ic_close"
            android:layout_alignParentRight="true"
            android:layout_marginTop="21dp"
            android:layout_marginRight="26dp"/>
        <LinearLayout
            android:id="@+id/lin_edit"
            android:layout_below="@+id/txt_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/edit_id"
                    android:layout_width="@dimen/signup_edit_width"
                    android:layout_height="@dimen/signup_edit_height"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/signup_edit_marginTop"
                    android:background="@drawable/rounded_textbox"
                    android:textSize="@dimen/signup_edit_textSize"
                    android:textColor="@android:color/black"
                    android:hint="@string/id"
                    android:singleLine="true"
                    android:paddingLeft="@dimen/signup_icon_paddingLeft"/>
                <ImageView
                    android:layout_width="@dimen/signup_icon_size"
                    android:layout_height="@dimen/signup_icon_size"
                    android:layout_marginTop="@dimen/signup_icon_marginTop"
                    android:layout_marginLeft="@dimen/signup_icon_marginLeft"
                    android:layout_alignStart="@+id/edit_id"
                    android:layout_alignTop="@+id/edit_id"
                    android:src="@mipmap/ic_signup_id"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/edit_pw"
                    android:password="true"
                    android:layout_width="@dimen/signup_edit_width"
                    android:layout_height="@dimen/signup_edit_height"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/signup_edit_marginTop"
                    android:background="@drawable/rounded_textbox"
                    android:textSize="@dimen/signup_edit_textSize"
                    android:textColor="@android:color/black"
                    android:hint="@string/password"
                    android:singleLine="true"
                    android:paddingLeft="@dimen/signup_icon_paddingLeft"/>
                <ImageView
                    android:layout_width="@dimen/signup_icon_size"
                    android:layout_height="@dimen/signup_icon_size"
                    android:layout_marginTop="@dimen/signup_icon_marginTop"
                    android:layout_marginLeft="@dimen/signup_icon_marginLeft"
                    android:layout_alignStart="@+id/edit_pw"
                    android:layout_alignTop="@+id/edit_pw"
                    android:src="@mipmap/ic_signup_password"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/edit_pw_ok"
                    android:password="true"
                    android:layout_width="@dimen/signup_edit_width"
                    android:layout_height="@dimen/signup_edit_height"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/signup_edit_marginTop"
                    android:background="@drawable/rounded_textbox"
                    android:textSize="@dimen/signup_edit_textSize"
                    android:textColor="@android:color/black"
                    android:hint="@string/password_ok"
                    android:singleLine="true"
                    android:paddingLeft="@dimen/signup_icon_paddingLeft"/>
                <ImageView
                    android:layout_width="@dimen/signup_icon_size"
                    android:layout_height="@dimen/signup_icon_size"
                    android:layout_marginTop="@dimen/signup_icon_marginTop"
                    android:layout_marginLeft="@dimen/signup_icon_marginLeft"
                    android:layout_alignStart="@+id/edit_pw_ok"
                    android:layout_alignTop="@+id/edit_pw_ok"
                    android:src="@mipmap/ic_signup_password"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/edit_market_name"
                    android:layout_width="@dimen/signup_edit_width"
                    android:layout_height="@dimen/signup_edit_height"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/signup_edit_marginTop"
                    android:background="@drawable/rounded_textbox"
                    android:textSize="@dimen/signup_edit_textSize"
                    android:textColor="@android:color/black"
                    android:hint="@string/market_name"
                    android:singleLine="true"
                    android:paddingLeft="@dimen/signup_icon_paddingLeft"/>
                <ImageView
                    android:layout_width="@dimen/signup_icon_size"
                    android:layout_height="@dimen/signup_icon_size"
                    android:layout_marginTop="@dimen/signup_icon_marginTop"
                    android:layout_marginLeft="@dimen/signup_icon_marginLeft"
                    android:layout_alignStart="@+id/edit_market_name"
                    android:layout_alignTop="@+id/edit_market_name"
                    android:src="@mipmap/ic_signup_name"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/edit_email"
                    android:layout_width="@dimen/signup_edit_width"
                    android:layout_height="@dimen/signup_edit_height"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/signup_edit_marginTop"
                    android:background="@drawable/rounded_textbox"
                    android:textSize="@dimen/signup_edit_textSize"
                    android:textColor="@android:color/black"
                    android:hint="@string/email"
                    android:singleLine="true"
                    android:paddingLeft="@dimen/signup_icon_paddingLeft"/>
                <ImageView
                    android:layout_width="@dimen/signup_icon_size"
                    android:layout_height="@dimen/signup_icon_size"
                    android:layout_marginTop="@dimen/signup_icon_marginTop"
                    android:layout_marginLeft="@dimen/signup_icon_marginLeft"
                    android:layout_alignStart="@+id/edit_email"
                    android:layout_alignTop="@+id/edit_email"
                    android:src="@mipmap/ic_signup_email"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/edit_tel"
                    android:layout_width="@dimen/signup_edit_width"
                    android:layout_height="@dimen/signup_edit_height"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/signup_edit_marginTop"
                    android:background="@drawable/rounded_textbox"
                    android:textSize="@dimen/signup_edit_textSize"
                    android:textColor="@android:color/black"
                    android:hint="@string/tel"
                    android:singleLine="true"
                    android:paddingLeft="@dimen/signup_icon_paddingLeft"/>
                <ImageView
                    android:layout_width="@dimen/signup_icon_size"
                    android:layout_height="@dimen/signup_icon_size"
                    android:layout_marginTop="@dimen/signup_icon_marginTop"
                    android:layout_marginLeft="@dimen/signup_icon_marginLeft"
                    android:layout_alignStart="@+id/edit_tel"
                    android:layout_alignTop="@+id/edit_tel"
                    android:src="@mipmap/ic_tel"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/edit_phone"
                    android:layout_width="@dimen/signup_edit_width"
                    android:layout_height="@dimen/signup_edit_height"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/signup_edit_marginTop"
                    android:background="@drawable/rounded_textbox"
                    android:textSize="@dimen/signup_edit_textSize"
                    android:textColor="@android:color/black"
                    android:hint="@string/phone"
                    android:singleLine="true"
                    android:paddingLeft="@dimen/signup_icon_paddingLeft"/>
                <ImageView
                    android:layout_width="@dimen/signup_icon_size"
                    android:layout_height="@dimen/signup_icon_size"
                    android:layout_marginTop="@dimen/signup_icon_marginTop"
                    android:layout_marginLeft="@dimen/signup_icon_marginLeft"
                    android:layout_alignStart="@+id/edit_phone"
                    android:layout_alignTop="@+id/edit_phone"
                    android:src="@mipmap/ic_phone"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_marginTop="@dimen/signup_edit_marginTop"
                android:layout_width="@dimen/signup_edit_width"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal">
                <ImageView
                    android:id="@+id/img_profile"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="35dp"
                    android:layout_width="match_parent"
                    android:layout_height="160dp"
                    android:layout_centerInParent="true"
                    android:src="@mipmap/ic_no_img"/>
                <Button
                    android:id="@+id/btn_profile"
                    android:layout_width="match_parent"
                    android:layout_height="42dp"
                    android:layout_centerVertical="true"
                    android:textColor="@drawable/sel_txt_2"
                    android:text="@string/plz_select_img"
                    android:textSize="13.3sp"
                    android:background="@drawable/sel_l_gray_rnd"
                    />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/edit_address"
                    android:layout_width="@dimen/signup_edit_width"
                    android:layout_height="@dimen/signup_edit_height"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/signup_edit_marginTop"
                    android:background="@drawable/rounded_textbox"
                    android:textSize="@dimen/signup_edit_textSize"
                    android:textColor="@android:color/black"
                    android:hint="@string/address"
                    android:singleLine="true"
                    android:paddingLeft="@dimen/signup_icon_paddingLeft"/>
                <ImageView
                    android:layout_width="@dimen/signup_icon_size"
                    android:layout_height="@dimen/signup_icon_size"
                    android:layout_marginTop="@dimen/signup_icon_marginTop"
                    android:layout_marginLeft="@dimen/signup_icon_marginLeft"
                    android:layout_alignStart="@+id/edit_address"
                    android:layout_alignTop="@+id/edit_address"
                    android:src="@mipmap/ic_address"/>
            </RelativeLayout>
            <!-- spinner category -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Spinner
                    android:id="@+id/spin_category"
                    android:layout_width="@dimen/signup_edit_width"
                    android:background="@drawable/sel_l_gray_rnd"
                    android:layout_height="@dimen/signup_edit_height"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/signup_edit_marginTop">

                </Spinner>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/edit_homepage"
                    android:layout_width="@dimen/signup_edit_width"
                    android:layout_height="@dimen/signup_edit_height"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/signup_edit_marginTop"
                    android:background="@drawable/rounded_textbox"
                    android:textSize="@dimen/signup_edit_textSize"
                    android:textColor="@android:color/black"
                    android:hint="@string/homepage"
                    android:singleLine="true"
                    android:paddingLeft="@dimen/signup_icon_paddingLeft"/>
                <ImageView
                    android:layout_width="@dimen/signup_icon_size"
                    android:layout_height="@dimen/signup_icon_size"
                    android:layout_marginTop="@dimen/signup_icon_marginTop"
                    android:layout_marginLeft="@dimen/signup_icon_marginLeft"
                    android:layout_alignStart="@+id/edit_homepage"
                    android:layout_alignTop="@+id/edit_homepage"
                    android:src="@mipmap/ic_homepage"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/edit_description"
                    android:layout_width="@dimen/signup_edit_width"
                    android:layout_height="@dimen/signup_edit_height"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/signup_edit_marginTop"
                    android:background="@drawable/rounded_textbox"
                    android:textSize="@dimen/signup_edit_textSize"
                    android:textColor="@android:color/black"
                    android:hint="@string/description"
                    android:singleLine="true"
                    android:paddingLeft="@dimen/signup_icon_paddingLeft"/>
                <ImageView
                    android:layout_width="@dimen/signup_icon_size"
                    android:layout_height="@dimen/signup_icon_size"
                    android:layout_marginTop="@dimen/signup_icon_marginTop"
                    android:layout_marginLeft="@dimen/signup_icon_marginLeft"
                    android:layout_alignStart="@+id/edit_description"
                    android:layout_alignTop="@+id/edit_description"
                    android:src="@mipmap/ic_description"/>
            </RelativeLayout>
        </LinearLayout>
        <Button
            android:id="@+id/btn_signup"
            android:layout_width="@dimen/signup_edit_width"
            android:layout_below="@+id/lin_edit"
            android:layout_alignParentBottom="true"
            android:layout_marginTop ="30dp"
            android:layout_height="46dp"
            android:layout_centerHorizontal="true"
            android:text="@string/signup"
            android:textSize="18sp"
            android:textColor="@drawable/sel_txt_2"
            android:background="@drawable/sel_btn_yellow_round"/>
    </RelativeLayout>
</ScrollView>